tests/paczka1/small_fuzzy/35648773.err
Error in line 1: tZpsmmpS S992 10,2
Error in line 15: 3l5OScRRa S736 3,6
